Add container class to index.html and index.css for layout styling

--- a/touch index.html
+++ b/touch index.html
@@ -8,6 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div class="container">
         <h1>My Expense Tracker</h1>
+    </div>
 </body>
 </html>
