--- a/touch index.html
+++ b/touch index.html
@@ -14,6 +14,10 @@
 <div class="form-control">
     <label for="expense-name">Expense Name:</label>
     <input type="text" id="expense-name" placeholder="e.g., Coffee" required>
+    <div class="form-control">
+    <label for="expense-amount">Amount ($):</label>
+    <input type="number" id="expense-amount" placeholder="e.g., 5.00" min="0.01" step="0.01" required>
+</div>
 </div>
 </form>
     </div>
