--- a/touch index.html
+++ b/touch index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expense Tracker</title>
     <link rel="stylesheet" href="touch index.css">
-    <script src="script.js" defer></script>
+    <script src="touch script.js" defer></script>
 </head>
 <body>
     <div class="container">
