Add mobile responsiveness and proprietary license protection

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+    Expense Tracker Application
+    Copyright (c) 2025 anubhavy-05. All Rights Reserved.
+    Unauthorized copying or distribution is strictly prohibited.
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
